--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/TUNESHMAN/node-db4-project/issues"
   },
   "homepage": "https://github.com/TUNESHMAN/node-db4-project#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -25,7 +28,6 @@
     "helmet": "^3.22.0",
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
-    "nodemon": "^2.0.4",
     "sqlite3": "^4.2.0"
   }
 }
